# whisper-pyannote-diarization-docker

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  startup.sh
backend/app/: config.py  jobs.py  logging_config.py  main.py  worker.py
backend/app/pipeline/: audio.py  transcribe.py
frontend/: Dockerfile  nginx.conf
frontend/src/: App.css  App.jsx
