[project]
name = "whisper-diarization-backend"
version = "0.1.0"
description = "FastAPI backend for local transcription and diarization"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "python-multipart>=0.0.9",
    "faster-whisper>=1.0.1",
    "pyannote.audio==3.1.1",
    "torch==2.1.2",
    "torchaudio==2.1.2",
    "ffmpeg-python>=0.2.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "numpy<2.0.0",
    "huggingface-hub<0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
